--- a/src/app/page/Company/companypage/companypage.component.html
+++ b/src/app/page/Company/companypage/companypage.component.html
@@ -81,7 +81,7 @@
 
   <!-- TAB -->
   <div class="px-3 py-0">
-    <mat-tab-group  (selectedTabChange)="onTabChange($event)" >
+    <mat-tab-group color="primary"  (selectedTabChange)="onTabChange($event)" >
       <!-- employee -->
       <!-- <mat-tab label="Employee" style="background-color: lightyellow;" >
         <app-employeecomppage [activecompany]="activecompany"></app-employeecomppage>
@@ -93,17 +93,12 @@
         <app-routecomppage [activecompany]="activecompany"></app-routecomppage>
       </mat-tab>
 
-            
       <!-- vehicle -->
       <mat-tab label="Vehicle">
         <app-vehiclecomppage [activecompany]="activecompany"></app-vehiclecomppage>
       </mat-tab>
 
-
-
-      
-
-       <!-- User -->
+      <!-- User -->
        <mat-tab label="User" >
         <app-usercompage [activecompany]="activecompany"></app-usercompage>
       </mat-tab>
@@ -111,6 +106,11 @@
       <!-- dropoint -->
       <mat-tab label="Drop Point" *ngIf="false">
         <app-droppointcomppage [activecompany]="activecompany"></app-droppointcomppage>
+      </mat-tab>
+
+      <!-- route -->
+      <mat-tab label="Shift">
+        <app-shiftpage [company]="activecompany"></app-shiftpage>
       </mat-tab>
 
     </mat-tab-group>
