--- a/src/app/page/Company/searchcompanypage/searchcompanypage.component.html
+++ b/src/app/page/Company/searchcompanypage/searchcompanypage.component.html
@@ -7,6 +7,55 @@
   </div>
   <mat-spinner></mat-spinner>
 </div>
+
+  <!-- Header -->
+<div style="margin: 0,5px;">
+    <div class="row align-items-center" style="background-color: lightskyblue; padding:5px ;" > 
+        <div class="col-auto text-align start" >
+            <div class="row" style="text-align: right; margin-right: 10px; color: blue;">
+                <div class="col" style="display: flex; align-items: center;"
+                    matTooltip="แสดงบัตรพนักงาน"  (click)="show.viewtype=0" >
+                    <mat-icon style="width: 100%; " [style.color]="show.viewtype==0?'blue':'lightgray'">dns</mat-icon>
+                </div>
+                <div class="col" style="display: flex; align-items: center;"
+                    matTooltip="แสดงตารางพนักงาน" (click)="show.viewtype=1">
+                    <mat-icon style="width: 100%; " [style.color]="show.viewtype==1?'blue':'lightgray'" >list</mat-icon>
+                </div>
+            </div>
+        </div>        
+  
+        <div class="col text-center" style="display: flex; align-items: center; justify-content: center;">
+          <h1 *ngIf="show.viewtype==0"> ข้อมูลบริษัท (ลูกค้า) </h1> 
+          <h1 *ngIf="show.viewtype==1"> ตารางบริษัท (ลูกค้า)  </h1> 
+          <div class="col" style="display: flex; justify-content: center;" *ngIf="show.search">
+          </div>
+        </div>
+
+        <div class="col-auto text-align end" >
+          <div class="row" style="text-align: right; margin-right: 10px; color: blue;">
+            <!-- <div class="col" style="display: flex; align-items: center;"
+              matTooltip="ค้นหาพนักงาน" (click)="show.search=!show.search" >
+              <mat-icon style="width: 100%;">search</mat-icon>
+            </div> -->
+            <div class="col" style="display: flex; align-items: center;" *ngIf="show.addcompany"
+              mat-raised-button matTooltip="เพิ่มข้อมูลพนักงานขับรถ" (click)="addcompany(compprofilemodal)" >
+              <mat-icon style="width: 100%; color: blue;">add_box</mat-icon>
+            </div>
+            <div class="col" style="display: flex; align-items: center;"  *ngIf="false"
+              mat-raised-button matTooltip="พิมพ์ข้อมูลพนักงานขับรถ" (click)="exportprint()">
+              <mat-icon style="width: 100%; color: blue;">print</mat-icon>
+            </div>
+            <div class="col" style="display: flex; align-items: center;" 
+              mat-raised-button matTooltip="ส่งออกข้อมูลพนักงานขับรถเป็น Excel" (click)="exportexcel()">
+              <mat-icon style="width: 100%; color: blue;">file_download</mat-icon>
+            </div>
+          </div>
+        </div>        
+    </div>
+
+</div>
+
+
   <div *ngIf="show.viewtype==0">
     <div class="card-container">
       <div class="company-card" *ngFor="let comp of companydata">
@@ -59,83 +108,35 @@
       </div>
     </div>
   </div>
-  <div class="company-card" *ngIf="show.addcompany">
-    <mat-card >
-      <mat-card-header class="custom-header" (click)="addcompany(compprofilemodal)" style="cursor:pointer;">
-        <div mat-card-avatar style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 0px;">
-          <mat-icon>add</mat-icon>
+
+  <div  style="width:100%; height: 90%; overflow :scroll" *ngIf="show.viewtype==1">
+      <div class="table-container">
+        <div class="row table-header">
+          <div class="col-1">image</div>
+          <div class="col-3">companyname</div>
+          <div class="col-2">contract</div>
+          <div class="col-2">phone</div>
+          <div class="col-1">route</div>
+          <div class="col-1">drop</div>
+          <div class="col-1">vehicle</div>
+          <!-- <div class="col-1">Edit</div>
+          <div class="col-1">Delete</div> -->
         </div>
-        <mat-card-title class="truncate-title">Create Compay</mat-card-title>
-      </mat-card-header>
-    </mat-card>
-  </div>
-
-  <div *ngIf="show.viewtype==1">
-    <div class="row no guster" style="width: 100%;">
-
-      <div class="col-2 example-full-width" style="text-align: end; vertical-align: middle; padding: 10px; ">
-        <h2 style="text-align:center; vertical-align: text-bottom;">ข้อมูลลูกค้า (โรงงาน)</h2>
-      </div>
-      <div class="col-6 example-full-width">
-        <mat-form-field style=" width: 100%; padding: 10px; ">
-          <!-- <mat-form-field hintLabel="Max 20 characters"> -->
-          <mat-label>Name or number</mat-label>
-          <input matInput #input maxlength="20" (keyup)="applyFilter($event.target)" matInput placeholder="Filter">
-        </mat-form-field>
-      </div>
-      <div class="col-4">
-        <div class="example-full-width" style="text-align: end; vertical-align: middle; padding: 10px; ">
-          <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">view_module</mat-icon>
-          <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">view_list</mat-icon>
-          <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">print</mat-icon>
-          <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">add</mat-icon>
+        <div *ngFor="let comp of companydata" 
+            class="row table-row"
+            [class.selected]="comp.id === activecompany.id" 
+            (click)="opencompanydata(comp,compdetailmodal)">
+          <div class="col-2">
+            <img class="company-logo" [src]="comp.complogo  === '' ?va.icon.user:comp.complogo">
+          </div>
+          <div class="col-3">{{ comp.companyname }}</div>
+          <div class="col-2">{{ comp.contract }}</div>
+          <div class="col-2">{{ va.setphoneformat(comp.phone)}}</div>
+          <div class="col-1">{{ comp.totalroute}}</div>
+          <div class="col-1">{{ comp.totaldrop}}</div>
+          <div class="col-1">{{ comp.totalvehicle}}</div>
         </div>
       </div>
-    </div>
-
-    <!-- Table & Summary data -->
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
-        <!-- company id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell mat-sort-header *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-          <td mat-footer-cell *matFooterCellDef> Total </td>
-        </ng-container>
-
-        <!-- company name Column -->
-        <ng-container matColumnDef="company">
-          <th mat-header-cell mat-sort-header *matHeaderCellDef> บริษัท </th>
-          <td mat-cell *matCellDef="let element"> {{element.company}} </td>
-          <td mat-footer-cell *matFooterCellDef> </td>
-        </ng-container>
-
-        <!-- totalroute Column -->
-        <ng-container matColumnDef="totalroute">
-          <th mat-header-cell mat-sort-header *matHeaderCellDef> สายเดินรถ </th>
-          <td mat-cell *matCellDef="let element"> {{element.totalroute | number:'1.2-2':'en-US'}} </td>
-          <td mat-footer-cell *matFooterCellDef> {{getSumdata('totalroute') | number:'1.2-2':'en-US'}} </td>
-        </ng-container>
-
-        <!-- totalemployee Column -->
-        <ng-container matColumnDef="totalemployee">
-          <th mat-header-cell mat-sort-header *matHeaderCellDef> พนักงาน </th>
-          <td mat-cell *matCellDef="let element"> {{element.totalemployee}} </td>
-          <td mat-footer-cell *matFooterCellDef>{{getSumdata('totalemployee')| number:'1.2-2':'en-US'}} </td>
-        </ng-container>
-
-        <!-- Control Header Row Footer -->
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row (click)="onSelectedRow(row)" *matRowDef="let row; columns: displayedColumnsData;"></tr>
-        <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
-      </table>
-
-      <!--  Control Page แสดงข้อมูลมากกว่า 1 หน้า -->
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
-
-    </div>
-
   </div>
 
 </div>
