--- a/src/app/page/User/usercompage/usercompage.component.html
+++ b/src/app/page/User/usercompage/usercompage.component.html
@@ -1,90 +1,98 @@
-<!-- spinner -->
-<div class="container-spiner" *ngIf="show.Spinner">
-    <div class="row">
-      Please Watting...
-    </div>
-    <mat-spinner></mat-spinner>
+<div class="position-relative" style="height: 100%; width:100%; overflow: hidden;">
+  
+  <!-- spinner -->
+  <div class="container-spiner" *ngIf="show.Spinner">
+      <div class="row">
+        Please Watting...
+      </div>
+      <mat-spinner></mat-spinner>
   </div>
-  <div class="position-relative" style="height: 100%; width:100%; overflow: hidden;">
 
-    <div class="container"
-        style="display: flex; justify-content: space-between; align-items: center; width:100hw; margin: 5px;">
-        <div class="col" style="flex: 0 0 auto;">
-
-        </div>
-        <div class="col" style="flex: 0 0 auto; text-align: right;">
-            <div class="row">
-                <div class="col" style="display: flex; align-items: center; cursor: pointer;"
-                    matTooltip="เพิ่มข้อมูลผู้ดูแล" (click)="addnewuser(addusermodal)" >
-                    <mat-icon style="width: 100%; color: blue;">add_box</mat-icon>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row" style="width:100vw;">
-        <div class="user-container">
-            <mat-card *ngFor="let user of maindata" class="user-card">
-              <mat-card-header style="cursor:pointer;" (click)="Showuser(user,userdetailmodal)">
-                <div mat-card-avatar style="margin-right: 20px;">
-                    <img class="profileimg" [src]="user.userimage===''?va.icon.user:user.userimage"/>
-                </div>
-                <mat-card-subtitle>{{ user.empname }}</mat-card-subtitle>
-                <mat-card-subtitle>{{ user.rolename }} : {{user.phone}} </mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <div class="icon-inrow" matTooltip="บริษัทที่สังกัด">
-                    <mat-icon> home </mat-icon>
-                    <span>{{user.companyname}} </span>
-                </div>
-                <div class="icon-inrow" matTooltip="ชื่อในไลน์">
-                    <mat-icon> account_circle </mat-icon>
-                    <span>: {{user.linename}}</span>
-                </div>
-
-              </mat-card-content>
-            </mat-card>
+  <!-- tab header -->
+  <div style="margin: 0,5px;">
+      <div class="row align-items-center" style="background-color: lightskyblue; padding:5px ;" >
+ 
+       <div class="col-auto text-align start" >
+           <div class="row" style="text-align: right; margin-right: 10px;">
+               <div class="col" style="display: flex; align-items: center;"
+                   matTooltip="แสดงชื่อกะงาน"  (click)="show.viewtype=0" >
+                   <mat-icon style="width: 100%;" [style.color]="show.viewtype==0?'blue':'lightgray'">dns</mat-icon>
+               </div>
+               <div class="col" style="display: flex; align-items: center;"
+                   matTooltip="แสดงตารางกะงาน" (click)="show.viewtype=1">
+                   <mat-icon style="width: 100%;" [style.color]="show.viewtype==1?'blue':'lightgray'" >list</mat-icon>
+               </div>
+           </div>
+       </div>        
+ 
+          <div class="col text-center" style="display: flex; align-items: center; justify-content: center;">
+              <h1 *ngIf="show.viewtype==0"> ข้อมูลผู้ดูแลลูกค้า </h1> 
+              <h1 *ngIf="show.viewtype==1"> ตารางผู้ดูแลลูกค้า  </h1> 
           </div>
-
-
-        <!-- <div  style="padding: 10px; box-shadow: none;">
-            <div style="width: 100%;">
-              <div class="row">
-                <mat-card class="col-3" appearance="outlined" *ngFor="let user of maindata;">
-                  <mat-card-header>
-                    <div mat-card-avatar>
-                      <img class="profileimg" [src]="user.userimage==''?va.icon.user:user.userimage"/>
-                    </div>
-                    <mat-card-subtitle >{{user.empname}}</mat-card-subtitle>
-                  </mat-card-header>
-                  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                  <mat-card-content>
-                    <div class="container"
-                    style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
-                    <div class="row" style="flex: 0 0 auto; text-align: start;">
-                        {{user.companyname}}
-                    </div>
-                    <div class="row" style="display:flexbox; text-align: start;">
-                        {{user.department}}
-                    </div>
-                    <div class="row" style="flex: 0 0 auto;">
-                        {{user.linename}}
-                    </div>
-                    <div class="row" style="flex: 0 0 auto;">
-                        {{user.phone}}
-                    </div>
-                    <div class="row" style="flex: 0 0 auto;">
-                        {{user.rolename}}
-                    </div>
-
-                </div>
-                  </mat-card-content>
-                </mat-card>
+          <div class="col-auto text-align end" >
+              <div class="row" style="text-align: right; margin-right: 10px; color: blue;">
+                  <div class="col" style="display: flex; align-items: center;"
+                      matTooltip="เพิ่มผู้ดูแลลูกค้า" (click)="addnewuser(addusermodal)">
+                      <mat-icon style="width: 100%;">add_box</mat-icon>
+                  </div>
+                  <div class="col" style="display: flex; align-items: center;" *ngIf="false"
+                      matTooltip="พิมพ์ข้อมูลผู้ดูแลลูกค้า" (click)="exportprint()">
+                      <mat-icon style="width: 100%; ">print</mat-icon>
+                  </div>
+                  <div class="col" style="display: flex; align-items: center;"
+                      matTooltip="ดาวน์โหลดข้อมูลผู้ดูแลลูกค้า" (click)="exportexcel()">
+                      <mat-icon style="width: 100%; ">file_download</mat-icon>
+                  </div>
               </div>
-            </div>
-          </div> -->
-    </div>
+          </div>        
+      </div>
+  </div>
 
+  <!-- Body -->
+  <div *ngIf="show.viewtype == 0">
+    <div class="user-container">
+        <mat-card *ngFor="let user of maindata" class="user-card">
+          <mat-card-header style="cursor:pointer;" (click)="Showuser(user,userdetailmodal)">
+            <div mat-card-avatar style="margin-right: 20px;">
+                <img class="profileimg" [src]="user.userimage===''?va.icon.user:user.userimage"/>
+            </div>
+            <mat-card-subtitle>{{ user.empname }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ user.rolename }} : {{user.phone}} </mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <div class="icon-inrow" matTooltip="บริษัทที่สังกัด">
+                <mat-icon> home </mat-icon>
+                <span>{{user.companyname}} </span>
+            </div>
+            <div class="icon-inrow" matTooltip="ชื่อในไลน์">
+                <mat-icon> account_circle </mat-icon>
+                <span>: {{user.linename}}</span>
+            </div>
+
+          </mat-card-content>
+        </mat-card>
+    </div>
+  </div>
+
+  <div class="table-container" *ngIf="show.viewtype==1">
+    <div class="row table-header">
+      <div class="col-1">image</div>
+      <div class="col-3">empname</div>
+      <div class="col-2">phone</div>
+      <div class="col-2">rolename</div>
+      <div class="col-2">empcode</div>
+    </div>
+    <div *ngFor="let user of maindata" 
+         class="row table-row"
+         [class.selected]="user.id === activeuser.id" 
+         (click)="Showuser(user,userdetailmodal)">
+      <div class="col-1"><img class="profileimg" [src]="user.userimage===''?va.icon.user:user.userimage"/></div>
+      <div class="col-3">{{ user.empname }}</div>
+      <div class="col-2">{{ va.setphoneformat(user.phone) }}</div>
+      <div class="col-2">{{ user.rolename}}</div>
+      <div class="col-2">{{ user.empcode}}</div>
+    </div>
+  </div>
 </div>
 
 <ng-template #addusermodal let-modal>
